--- a/Scripts/cvAnalysis/manifest.json
+++ b/Scripts/cvAnalysis/manifest.json
@@ -1368,6 +1368,9 @@
     }
   },
   "files": {
+    "functionsDataImportProcessing.R": {
+      "checksum": "6f36fb04a6bb58af6d4e85e025029845"
+    },
     "functionsProbScoreCalc.R": {
       "checksum": "190ab6250c270ae6e077c8eb96ec10ee"
     },
