--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Scripts/cvAnalysis/JSON.R
 Data/datin.Rdata
 Data/phq9Subset.Rdata
 Scripts/DataManagement/PHQ9/phq9Subset.Rdata
+Data/datin.Rdata
+Data/phq9Subset.Rdata
+*.Rdata
